--- a/works.html
+++ b/works.html
@@ -33,16 +33,13 @@
                     <source src="reels gallery.mp4" type="video/mp4">
                 </video>
             </div>
-            <div class="message">
-
-            </div>
             <div class="g-content">
                 <div class="category">
                     <div class="tab">
                         <h1>Category</h1>
                         <a href="#graphic" class="a1">Graphic Art</a>
                         <a href="#photo">Photogprahy</a>
-                        <a href="">Videography</a>
+                        <a href="#video">Videography</a>
                     </div>
                     <h1 id="graphic">Graphic Art</h1>
                     <div class="cat">
@@ -131,53 +128,236 @@
                             </div>
                         </div>
                     </div>
-                        <h1 id="photo">Photography</h1>
+                    <h1 id="photo">Photography</h1>
+                    <div class="cat">
+                        <div class="arts">
+                            <a href="img1.jpeg" target="_blank">
+                                <div class="shadow">
+                                    <div class="shw-h1">
+                                        <h1>BIRB</h1>
+                                    </div>
+                                    <a href="img1010.png" target="_blank">
+                                        <img src="img10.png" alt="">
+                                    </a>
+                                </div>
+                            
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>SKETCH #1</h1>
+                                </div>
+                                <a href="img1111.png" target="_blank">
+                                    <img src="img11.png" alt="">
+                                </a>
+                            </div>
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>GACHA KING</h1>
+                                </div>
+                                <a href="img1212.jpg" target="_blank">
+                                    <img src="img12.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cat">
+                        <div class="arts">
+                                <div class="shadow">
+                                    <div class="shw-h1">
+                                        <h1>SEEK DISCOMFORT</h1>
+                                    </div>
+                                    <a href="img1313.jpg" target="_blank">
+                                        <img src="img13.jpg" alt="">
+                                    </a>
+                                </div>
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>SKETCH #1</h1>
+                                </div>
+                                <a href="img1414.png" target="_blank">
+                                    <img src="img14.png" alt="">
+                                </a>
+                            </div>
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>GACHA KING</h1>
+                                </div>
+                                <a href="img1515.jpg" target="_blank">
+                                    <img src="img15.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cat">
+                        <div class="arts">
+                                <div class="shadow">
+                                    <div class="shw-h1">
+                                        <h1>SEEK DISCOMFORT</h1>
+                                    </div>
+                                    <a href="img1616.jpg" target="_blank">
+                                        <img src="img16.jpg" alt="">
+                                    </a>
+                                </div>
+                            
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>SKETCH #1</h1>
+                                </div>
+                                <a href="img1717.jpg" target="_blank">
+                                    <img src="img17.jpg" alt="">
+                                </a>
+                            </div>
+                            <div class="shadow">
+                                <div class="shw-h1">
+                                    <h1>GACHA KING</h1>
+                                </div>
+                                <a href="img1212.jpg" target="_blank">
+                                    <img src="img18.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <h1 id="video">Videography</h1>
+                    <div class="v-container">
+                        <div class="vids">
+                            <div class="vid-holder">             
+                                <div class="box1" id="box1">
+                                    <a href="https://youtu.be/Q3x9PNDHn3g?si=ZdYZ_Iz1TVZHEio9" target="_blank">
+                                        <div class="links">
+                                            <h1><i class="fa-regular fa-circle-play"></i></h1>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="box2" id="box2">
+                                    <a href="https://youtu.be/zjD4hw-dkHI?si=txF9s1wUy0ujlMU3" target="_blank">
+                                        <div class="links">
+                                            <h1><i class="fa-regular fa-circle-play"></i></h1>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="box3" id="box3">
+                                    <a href="https://www.facebook.com/hicurvestudio/posts/pfbid0F1FFPbXwviQKm52bm3DRCj1hWYtYYqHRm5v8A7UxdzkNks89nKEErPCyUxjbjEbLl" target="_blank">
+                                        <div class="links">
+                                            <h1><i class="fa-regular fa-circle-play"></i></h1>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="box4" id="box4">
+                                    <a href="https://youtu.be/myMEltXOt4k?si=cDgeR6JbumcW9RzR" target="_blank">
+                                        <div class="links">
+                                            <h1><i class="fa-regular fa-circle-play"></i></h1>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="button-dot">
+                            <input type="button" id="bt1" onclick="openBox1()">
+                            <input type="button" id="bt2" onclick="openBox2()">
+                            <input type="button" id="bt3" onclick="openBox3()">
+                            <input type="button" id="bt4" onclick="openBox4()">
+                        </div>
+                    </div>
                     </div>
                 </div>
-                <div class="ref">
-                    <div class="r-container">
-                    <div class="c-logo">
-                        <img src="Asset 1.png" alt="">
-                        <div class="c1">
-                            <div class="c2">
-                                <p>Polomolok <br>
-
-                                    South Cotabato 
-                                    Soccsksargen 
-                                    Philippines
-                                </p>
-                            </div>
-                            <div class="c3">
-                                <p>
-                                    cayundamark@gmail.com
-                                    09929292929
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="c-icons">
-                        <div class="socmed">
-                            <h1>FOLLOW ME</h1>
-                            <div class="socapp">
-                                <ul>
-                                    <li><i class="fa-brands fa-x-twitter"></i></li>
-                                    <li><i class="fa-brands fa-square-facebook"></i></li>
-                                    <li><i class="fa-brands fa-instagram"></i></li>
-                                    <li><i class="fa-brands fa-tiktok"></i></li>
-                                    <li><i class="fa-brands fa-discord"></i></li>
-                                    <li><i class="fa-brands fa-youtube"></i></li>
-                                    <li><i class="fa-brands fa-twitch"></i></li>
-                                    <li><i class="fa-regular fa-envelope"></i></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
-                    <div class="crt">
-                        <h1>© 2023, Leave a Mark!</h1>
-                    </div>
                 </div>
             </div>
+            <div class="ref">
+                <div class="r-container">
+                <div class="c-logo">
+                    <img src="Asset 1.png" alt="">
+                    <div class="c1">
+                        <div class="c2">
+                            <p>Polomolok <br>
+
+                                South Cotabato 
+                                Soccsksargen 
+                                Philippines
+                            </p>
+                        </div>
+                        <div class="c3">
+                            <p>
+                                cayundamark13@gmail.com
+                                09491276279
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="c-icons">
+                    <div class="socmed">
+                        <h1>FOLLOW ME</h1>
+                        <div class="socapp">
+                            <ul>
+                                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><li><i class="fa-brands fa-x-twitter"></i></li></a>
+                                <a href="https://www.facebook.com/hicurvestudio" target="_blank"><li><i class="fa-brands fa-square-facebook"></i></li></a>
+                                <a href="https://www.instagram.com/mxxrcxx_/" target="_blank"><li><i class="fa-brands fa-instagram"></i></li></a>
+                                <a href="https://www.tiktok.com/@sigma_monkey0?lang=en" target="_blank"><li><i class="fa-brands fa-tiktok"></i></li></a>
+                                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><li><i class="fa-brands fa-discord"></i></li></a>
+                                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><li><i class="fa-brands fa-youtube"></i></li></a>
+                                <a href="https://www.twitch.tv/cdawgva" target="_blank"><li><i class="fa-brands fa-twitch"></i></li></a>
+                                <a href="https://www.youtube.com/watch?v=KqJO_3UsJ-Q" target="_blank"><li><i class="fa-regular fa-envelope"></i></li></a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                <div class="crt">
+                    <h1>© 2023, Leave a Mark!</h1>
+                </div>
         </div>
+        <script>
+            var box1 = document.getElementById("box1")
+            var box2 = document.getElementById("box2")
+            var box3 = document.getElementById("box3")
+            var box4 = document.getElementById("box4")
+            var bt1 = document.getElementById("bt1")
+            var bt2 = document.getElementById("bt2")
+            var bt3 = document.getElementById("bt3")
+            var bt4 = document.getElementById("bt4")
+
+            function openBox1(){
+                box1.style.transform = "translateX(0)";
+                box2.style.transform = "translateX(0)";
+                box3.style.transform = "translateX(0)";
+                box4.style.transform = "translateX(0)";
+                bt1.style.backgroundColor = "#b4b4b4";
+                bt2.style.backgroundColor = "#747474";
+                bt3.style.backgroundColor = "#747474";
+                bt4.style.backgroundColor = "#747474";
+            }
+
+            function openBox2(){
+                box1.style.transform = "translateX(-100%)";
+                box2.style.transform = "translateX(-100%)";
+                box3.style.transform = "translateX(-100%)";
+                box4.style.transform = "translateX(-100%)";
+                bt1.style.backgroundColor = "#747474";
+                bt2.style.backgroundColor = "#b4b4b4";
+                bt3.style.backgroundColor = "#747474";
+                bt4.style.backgroundColor = "#747474";
+            }
+
+            function openBox3(){
+                box1.style.transform = "translateX(-200%)";
+                box2.style.transform = "translateX(-200%)";
+                box3.style.transform = "translateX(-200%)";
+                box4.style.transform = "translateX(-200%)";
+                bt1.style.backgroundColor = "#747474";
+                bt2.style.backgroundColor = "#747474";
+                bt3.style.backgroundColor = "#b4b4b4";
+                bt4.style.backgroundColor = "#747474";
+            }
+
+            function openBox4(){
+                box1.style.transform = "translateX(-300%)";
+                box2.style.transform = "translateX(-300%)";
+                box3.style.transform = "translateX(-300%)";
+                box4.style.transform = "translateX(-300%)";
+                bt1.style.backgroundColor = "#747474";
+                bt2.style.backgroundColor = "#747474";
+                bt3.style.backgroundColor = "#747474";
+                bt4.style.backgroundColor = "#b4b4b4";
+            }
+
+        </script>
     </body>
     </html>
