--- a/works.html
+++ b/works.html
@@ -134,7 +134,7 @@
                             <a href="img1.jpeg" target="_blank">
                                 <div class="shadow">
                                     <div class="shw-h1">
-                                        <h1>BIRB</h1>
+                                        <h1>PHOTO #1</h1>
                                     </div>
                                     <a href="img1010.png" target="_blank">
                                         <img src="img10.png" alt="">
@@ -143,7 +143,7 @@
                             
                             <div class="shadow">
                                 <div class="shw-h1">
-                                    <h1>SKETCH #1</h1>
+                                    <h1>PHOTO #2</h1>
                                 </div>
                                 <a href="img1111.png" target="_blank">
                                     <img src="img11.png" alt="">
@@ -151,7 +151,7 @@
                             </div>
                             <div class="shadow">
                                 <div class="shw-h1">
-                                    <h1>GACHA KING</h1>
+                                    <h1>PHOTO #3</h1>
                                 </div>
                                 <a href="img1212.jpg" target="_blank">
                                     <img src="img12.jpg" alt="">
@@ -163,7 +163,7 @@
                         <div class="arts">
                                 <div class="shadow">
                                     <div class="shw-h1">
-                                        <h1>SEEK DISCOMFORT</h1>
+                                        <h1>PHOTO #4</h1>
                                     </div>
                                     <a href="img1313.jpg" target="_blank">
                                         <img src="img13.jpg" alt="">
@@ -171,7 +171,7 @@
                                 </div>
                             <div class="shadow">
                                 <div class="shw-h1">
-                                    <h1>SKETCH #1</h1>
+                                    <h1>PHOTO #5</h1>
                                 </div>
                                 <a href="img1414.png" target="_blank">
                                     <img src="img14.png" alt="">
@@ -179,7 +179,7 @@
                             </div>
                             <div class="shadow">
                                 <div class="shw-h1">
-                                    <h1>GACHA KING</h1>
+                                    <h1>PHOTO #6</h1>
                                 </div>
                                 <a href="img1515.jpg" target="_blank">
                                     <img src="img15.jpg" alt="">
@@ -191,7 +191,7 @@
                         <div class="arts">
                                 <div class="shadow">
                                     <div class="shw-h1">
-                                        <h1>SEEK DISCOMFORT</h1>
+                                        <h1>PHOTO #7</h1>
                                     </div>
                                     <a href="img1616.jpg" target="_blank">
                                         <img src="img16.jpg" alt="">
@@ -200,7 +200,7 @@
                             
                             <div class="shadow">
                                 <div class="shw-h1">
-                                    <h1>SKETCH #1</h1>
+                                    <h1>PHOTO #8</h1>
                                 </div>
                                 <a href="img1717.jpg" target="_blank">
                                     <img src="img17.jpg" alt="">
@@ -208,7 +208,7 @@
                             </div>
                             <div class="shadow">
                                 <div class="shw-h1">
-                                    <h1>GACHA KING</h1>
+                                    <h1>PHOTO #9</h1>
                                 </div>
                                 <a href="img1212.jpg" target="_blank">
                                     <img src="img18.jpg" alt="">
